--- a/resume.html
+++ b/resume.html
@@ -21,7 +21,7 @@
         <header>
             <nav>
                 <ul>
-                    <li><a class="active" href="#">首頁</a></li>
+                    <li><a class="active" href="index.html">首頁</a></li>
                     <li><a href="resume.html">我的履歷</a></li>
                     <li><a href="contact.html">聯絡方式</a></li>
                     <li><a href="https://testnets.opensea.io/0xC27DdbfC7F21Ea5281D092F24B028F38f66B9C36">NFT作品</a></li>
