footer bugs fixed

--- a/resume.html
+++ b/resume.html
@@ -91,9 +91,9 @@
         </main>
             <!-- footer links for line and github -->
             <footer>
-                <a href="#"><img src="./ICONS/line-official.svg" alt="line" title="line page"></a>
-                <a href="#"><img src="./ICONS/facebook.svg" alt="facebook" title="facebook page"></a>
-                <a href="#"><img src="./ICONS/github-brands.svg" alt="github" title="github page"></a>
+                <a href="https://line.me/ti/p/8mS47unZcL"><img src="./ICONS/line-official.svg" alt="line" title="line page"></a>
+                <a href="https://www.facebook.com/profile.php?id=100002714480219"><img src="./ICONS/facebook.svg" alt="facebook" title="facebook page"></a>
+                <a href="https://github.com/keep70326"><img src="./ICONS/github-brands.svg" alt="github" title="github page"></a>
             </footer>
     </body>
 </html>
