--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
                     <li><a class="active" href="contact.html">聯絡方式</a></li>
                     <li><a href="https://testnets.opensea.io/0xC27DdbfC7F21Ea5281D092F24B028F38f66B9C36">NFT作品</a></li>
                     <li><a href="./Hawaii project/index.html">夏威夷旅遊租借服務</a>
-                    <li><a href="./Taiwan project/index.html">台灣經濟發展網</a></li>
+                        <li><a href="./To do list project/">Todo List project</a></li>
                 </ul>
             </nav>
         </header>
